<resources>
    <string name="app_name">My Application</string>
    <string name="linearlayout">linearlayout</string>
    <string name="relativelayout">relativelayout</string>
    <string name="tablelayout">tablelayout</string>
    <string name="test1">One,One</string>
    <string name="test2">One,Two</string>
    <string name="test3">One,Three</string>
    <string name="test4">One,Four</string>
    <string name="test5">Two,One</string>
    <string name="test6">Two,Two</string>
    <string name="test7">Two,Three</string>
    <string name="test8">Two,Four</string>
    <string name="test9">Three,One</string>
    <string name="test10">Three,Two</string>
    <string name="test11">Three,Three</string>
    <string name="test12">Three,Four</string>
    <string name="test13">Four,One</string>
    <string name="test14">Four,Two</string>
    <string name="test15">Four,Three</string>
    <string name="test16">Four,Four</string>
    <string name="message">Open...</string>
    <string name="message1">Ctrl-O</string>
    <string name="message2">Save...</string>
    <string name="message3">Ctrl-S</string>
    <string name="message4">Save As...</string>
    <string name="message5">Ctrl-Shift-S</string>
    <string name="message6">X</string>
    <string name="message7">Import...</string>
    <string name="message8">X</string>
    <string name="message9">Export...</string>
    <string name="message10">Ctrl-E</string>
    <string name="message11">Quit</string>
    <string name="color">RED</string>
    <string name="color1">ORANGE</string>
    <string name="color2">YELLOW</string>
    <string name="color3">GREEN</string>
    <string name="color4">BLUE</string>
    <string name="color5">INDIGO</string>
    <string name="color6">VIOLET</string>
</resources>
