<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1">
    <TableRow>
        <TextView
            android:layout_column="1"
            android:text="@string/message"
            android:padding="3dip" />
        <TextView
            android:text="@string/message1"
            android:gravity="right"
            android:padding="3dip" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_column="1"
            android:text="@string/message2"
            android:padding="3dip" />
        <TextView
            android:text="@string/message3"
            android:gravity="right"
            android:padding="3dip" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_column="1"
            android:text="@string/message4"
            android:padding="3dip" />
        <TextView
            android:text="@string/message5"
            android:gravity="right"
            android:padding="3dip" />
    </TableRow>

    <View
        android:layout_height="2dip"
        android:background="#FF909090" />

    <TableRow>
        <TextView
            android:text="@string/message6"
            android:padding="3dip" />
        <TextView
            android:text="@string/message7"
            android:padding="3dip" />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/message8"
            android:padding="3dip" />
        <TextView
            android:text="@string/message9"
            android:padding="3dip" />
        <TextView
            android:text="@string/message10"
            android:gravity="right"
            android:padding="3dip" />
    </TableRow>

    <View
        android:layout_height="2dip"
        android:background="#FF909090" />

    <TableRow>
        <TextView
            android:layout_column="1"
            android:text="@string/message11"
            android:padding="3dip" />
    </TableRow>
</TableLayout>
