<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView android:text="@string/test1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center_horizontal"
            android:layout_margin="5dp"/>
        <TextView android:text="@string/test2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="0.4"
            android:gravity="center_horizontal"
            android:layout_margin="5dp"/>
        <TextView android:text="@string/test3"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center_horizontal"
            android:layout_margin="5dp"/>
        <TextView android:text="@string/test4"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center_horizontal"
            android:layout_margin="5dp"/>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView android:text="@string/test5"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center_horizontal"
            android:layout_margin="5dp"/>
        <TextView android:text="@string/test6"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="0.4"
            android:gravity="center_horizontal"
            android:layout_margin="5dp"/>
        <TextView android:text="@string/test7"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center_horizontal"
            android:layout_margin="5dp"/>
        <TextView android:text="@string/test8"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center_horizontal"
            android:layout_margin="5dp"/>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView android:text="@string/test9"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="0.25"
            android:gravity="center_horizontal"
            android:layout_margin="5dp"/>
        <TextView android:text="@string/test10"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="0.25"
            android:gravity="center_horizontal"
            android:layout_margin="5dp"/>
        <TextView android:text="@string/test11"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="0.25"
            android:gravity="center_horizontal"
            android:layout_margin="5dp"/>
        <TextView android:text="@string/test12"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="0.25"
            android:gravity="center_horizontal"
            android:layout_margin="5dp"/>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView android:text="@string/test13"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="0.2"
            android:layout_margin="5dp"/>
        <TextView android:text="@string/test14"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="0.4"
            android:gravity="center_horizontal"
            android:layout_margin="5dp"/>
        <TextView android:text="@string/test15"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center_horizontal"
            android:layout_margin="5dp"/>
        <TextView android:text="@string/test16"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center_horizontal"
            android:layout_margin="5dp"/>
    </LinearLayout>
</LinearLayout>